final card updates

--- a/mtgcc-spoiler-bot/set_release_dates/set_release_dates.json
+++ b/mtgcc-spoiler-bot/set_release_dates/set_release_dates.json
@@ -735,3 +735,8 @@ Limited Edition Beta LEB: October 1, 1993
 Limited Edition Alpha LEA: August 5, 1993
 Final Fantasy FIN: June 13, 2025
 Final Fantasy Commander FIC: June 13, 2025
+Final Fantasy Tokens TFIN: June 13, 2025
+Final Fantasy Commander Tokens TFIC: June 13, 2025
+FIN Standard Showdown PSS5: June 13, 2025
+Final Fantasy Regional Promos RFIN: June 13, 2025
+FIN Magic Spotlight FSPL: June 12, 2025
