--- a/mtgcc-spoiler-bot/set_release_dates/set_release_dates.json
+++ b/mtgcc-spoiler-bot/set_release_dates/set_release_dates.json
@@ -740,3 +740,4 @@ Final Fantasy Commander Tokens TFIC: June 13, 2025
 FIN Standard Showdown PSS5: June 13, 2025
 Final Fantasy Regional Promos RFIN: June 13, 2025
 FIN Magic Spotlight FSPL: June 12, 2025
+Edge of Eternities EOE: August 1, 2025
