fixed bug introduced by non-utf characters

--- a/mtgcc-spoiler-bot/set_release_dates/set_release_dates.json
+++ b/mtgcc-spoiler-bot/set_release_dates/set_release_dates.json
@@ -743,4 +743,4 @@ FIN Magic Spotlight FSPL: June 12, 2025
 Edge of Eternities EOE: August 1, 2025
 Edge of Eternities Commander EOC: August 1, 2025
 Marvel's Spider-Man SPM: September 26, 2025
-Magic × Duel Masters Promos PMDA: September 8, 2023
+Magic x Duel Masters Promos PMDA: September 8, 2023
