--- a/mtgcc-spoiler-bot/set_release_dates/set_release_dates.json
+++ b/mtgcc-spoiler-bot/set_release_dates/set_release_dates.json
@@ -744,3 +744,7 @@ Edge of Eternities EOE: August 1, 2025
 Edge of Eternities Commander EOC: August 1, 2025
 Marvel's Spider-Man SPM: September 26, 2025
 Magic x Duel Masters Promos PMDA: September 8, 2023
+Edge of Eternities: Stellar Sights EOS: August 1, 2025
+Final Fantasy: Through the Ages FCA: June 13, 2025
+Avatar: The Last Airbender TLA: November 21, 2025
+Avatar: The Last Airbender Eternal TLE: November 21, 2025
