closing out brang

--- a/mtgcc-spoiler-bot/set_release_dates/set_release_dates.json
+++ b/mtgcc-spoiler-bot/set_release_dates/set_release_dates.json
@@ -748,3 +748,4 @@ Edge of Eternities: Stellar Sights EOS: August 1, 2025
 Final Fantasy: Through the Ages FCA: June 13, 2025
 Avatar: The Last Airbender TLA: November 21, 2025
 Avatar: The Last Airbender Eternal TLE: November 21, 2025
+Alchemy: Edge of Eternities YEOE: August 19, 2025
